# aisenpai

./: .gitignore  Dockerfile  README.md  docker-compose.yml  startup.sh
.github/workflows/: docker-publish.yml
api-server/: app.py  pylintrc  pyproject.toml  requirements.txt
api-server-mock/: Dockerfile  data.json  docker-compose.yml
api-server/.devcontainer/: Dockerfile  devcontainer.json
api-server/modules/noun_detector/: noun_detector.py
api-server/modules/sentence_embedding/: sentence_embedding.py
api-server/modules_old/sentence_embedding/: bert_juman.py
api-server/modules_old/text_summarization/: text_summarization.py
api-server/srcs/controllers/: cache_controller.py  related_terms_controller.py
api-server/srcs/models/: cache_model.py  noun_detect_model.py  related_terms_model.py
api-server/test/: 01_sentence.sh  02_summary.sh  03_api_v1_synonym.sh  03_word.sh  04_qiita.sh  05_api_v1_dev_etcd.sh
kubernetes/: README.md  apiserver-mock.yaml  cleanup.sh  paisen.yaml  quickstart.sh
scenario-server/: app.js  logger.js  package-lock.json  package.json
scenario-server/.devcontainer/: Dockerfile  devcontainer.json
scenario-server/common/: common_settings.js  common_text.js  logger.js
scenario-server/config/: log4js.json
scenario-server/controllers/: login_controller.js  message_controller.js
scenario-server/models/: login_model.js  message_model.js
scenario-server/routes/: http.js  index.js  socket.js  socketio.js
ui/: package-lock.json  package.json  vue.config.js
ui/.devcontainer/: Dockerfile  devcontainer.json
ui/src/: App.vue
(+3 files in other folders)
