[tool.poetry]
name = "api-server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
gensim = "^3.8.3"
spacy = "^2.2.4"
black = "^19.10b0"
etcd3 = "^0.12.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
